# ArkenDriver

./: .gitignore  ArkenDriver.config  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: config.rs  main.rs
src/driver/: error.rs  mod.rs  navigation.rs  session.rs
src/infra/: chrome_driver_installer.rs  chrome_driver_process.rs  getChromeDriver.rs  mod.rs
